<resources>

    <!-- Main Activity strings -->

    <string name="create_event">Create Event</string>

    <string name="app_name_lc">Beacon</string>
    <string name="app_name">Beacon</string>
    <string name="title_activity_launcher">LauncherActivity</string>

    <!-- Fragment Names -->
    <string name="settings_fragment">Settings</string>
    <string name="map_fragment">Map</string>
    <string name="list_fragment">List</string>
    <string name="favourites_fragment">Favourites</string>

    <!-- Google Maps API Key -->
    <string name="google_maps_key">AIzaSyB_JjOg03PymmAvu5PQWa2hGwhUuZIpBPc</string>

    <string-array name="categories_array">
        <item>#party</item>
        <item>#sports</item>
        <item>custom</item>
    </string-array>
    <string name="title_activity_alsdfjlk">Alsdfjlk</string>
    <string name="title_activity_list_view">ListView</string>
    <string name="title_activity_event_page">Event Page</string>
    <string name="title_activity_create_event">Create Event</string>
    <string name="title_activity_edit_event">Edit Event</string>

    <!-- SettingsFragment strings -->
    <string name="pref_range_label">Search Range</string>
    <string name="pref_range_key" translatable="false">Search Range</string>
    <string name="pref_range_default">40</string>
    <string name="pref_range_summary">Events within this distance will be visible</string>
    <string name="pref_notifications_key" translatable="false">Enable Notifications</string>
    <string name="pref_notifications_label">Notifications</string>
    <string name="pref_notifications_default">true</string>
    <string name="pref_notifications_summary">\nEnable/Disable notifications \nfor favourited events</string>
    <string name="pref_notifications_summary_off">Enable Notifications</string>
    <string name="pref_notifications_summary_on">Disable Notifications</string>
    <string name="updated_pref_range">Search Range Updated</string>

    <!-- SettingsFragment settings categories -->
    <string name="search_settings">Search Settings</string>
    <string name="miscellaneous">Miscellaneous</string>

    <!-- EventPage Strings -->
    <string name="comments">Comments</string>
    <string name="favourited">Favourited event</string>
    <string name="un_favourited">Unfavourited event</string>
    <string name="host">Host</string>

    <!-- Sign out Strings -->
    <string name="sign_out">Sign Out</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out_confirmation">Are you sure you want to sign out?</string>

    <!-- No Internet Connection -->
    <string name="no_internet_title">No Internet Connection</string>
    <string name="no_internet_message">Beacon requires a stable internet connection for signing in</string>
    <string name="no_internet_create_event_message">Beacon requires a stable internet connection for event creation </string>
    <string name="no_internet_feature">Beacon requires a stable internet connection for this feature</string>

    <!-- CreateEventActivity strings -->
    <string name="upload_event_confirmation">Event Uploaded</string>

    <!-- EditEventPageActivity strings -->
    <string name="event_update_confirmation">Event Updated</string>
    <string name="delete_event_question">Delete Event?</string>
    <string name="delete_event_message">Are you sure you want to delete this event?</string>
    <string name="delete_event_confirmation">Event Deleted</string>

    <!-- Search Strings -->
    <string name="query_string">Search For Events</string>



</resources>
