<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--
    <PreferenceCategory android:title="@string/search_settings">
    -->
        <com.bcn.beacon.beacon.CustomViews.SearchRangePreference
            android:defaultValue="@string/pref_range_default"
            android:key="@string/pref_range_key" />

    <!--
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/miscellaneous">
    -->

        <CheckBoxPreference
            android:background="@color/colorPrimary"
            android:defaultValue="@string/pref_notifications_default"
            android:key="@string/pref_notifications_key"
            android:summaryOff="@string/pref_notifications_summary_off"
            android:summaryOn="@string/pref_notifications_summary_on"
            android:textColor="@color/custom_white"
            android:textSize="20sp"
            android:title="@string/pref_notifications_label" />
    <!--
    </PreferenceCategory>
    -->

</PreferenceScreen>